
= ruote-couch - CHANGELOG.txt


== ruote-couch 2.2.1    not yet released

- StorageParticipant :count => true made consistent (Thanks Jan Topiński)
- missed :skip option for #query_workitems (Thanks Eric Smith)


== ruote-couch 2.2.0    released 2011/03/01

- Ruote::Couch::CouchStorage -> Ruote::Couch::Storage
- get_msgs : once per minute do a real get, to avoid losing msgs
- engine.process(wfid) : fixed issue with freshly deleted documents
  (Thanks Claudio)


== ruote-couch 2.1.11    released 2010/10/01

- storage#shutdown back in business (for the sake of tests mostly)
- get_many(x, y, :descending => true) support
- adapted for engine.processes pagination
- workitems.by_participant() :skip and :limit support
- get_many(x, y, :count => true) support
- a database.purge! that can't be mislead by cache issues


== ruote-couch 2.1.10    released 2010/06/15

- storage#ids not returning design doc ids anymore
- now using CouchDB 0.11 ?feed=continuous&include_docs=true
- multi-worker hardened
- adapted #query_workitems to ruote 2.1.10


== ruote-couch 2.1.9    released 2010/03/22

- trusting rufus-jig : not closing couches anymore
- CouchStorage#clear and purge cleanup


== ruote-couch 2.1.8    released 2010/03/15

- 'couch_timeout' configuration parameter
- 'couch_prefix' and :prefix as configuration parameter


== ruote-couch 2.1.7    released 2010/02/15

- enabled Ruote::StorageParticipant#query(criteria)


== ruote-couch 2.1.5    released 2010/01/28

- implemented CouchStorage#by_wfid and #by_participant


== ruote-couch 2.1.4    released 2010/01/11

- Ruote::Couch::CouchStorage added #ids(type)
- Ruote::Couch::CouchStorage added #purge_type!(t)


== ruote-couch 2.1.3    released 2010/01/05
